--- a/hbd/Selamat-Ulang-Tahun-RIRI.html
+++ b/hbd/Selamat-Ulang-Tahun-RIRI.html
@@ -26,8 +26,14 @@
         <div class="back"></div>
       </div>
       <div class="inside">
-        <p>Wishing you a very happy birthday filled with love and laughter</p>
-        <h1>&#127873;</h1>
+        <div class="content-text">
+          <p>Happy Birthday Riri...</p>
+          <p>Semoga Keberkahan dan Kebahagiaan Selalu Menyertaimu, Sehat Selalu dan Semoga diusia Ke-17 tahun ini, Apa Yang diinginkan bisa segera tercapai.</p>
+        </div>
+        <div class="gambar-contaner">
+          <img class="img-target" src="rii.jpg" alt="" height="180px">
+        </div>
+        
       </div>
     </div>
   </body>
