--- a/hbd/Selamat-Ulang-Tahun-RIRI.html
+++ b/hbd/Selamat-Ulang-Tahun-RIRI.html
@@ -29,7 +29,7 @@
         <div class="content-text">
           <p>Happy Birthday Riri...</p>
           <p>Semoga Keberkahan dan Kebahagiaan Selalu Menyertaimu, Sehat Selalu dan Semoga Di-usia Ke-17 Tahun Ini, Apa Yang Diinginkan Bisa Segera Tercapai.</p>
-          <p>From : MNF & TTH</p>
+          <p style="color: chocolate;">From : MNF & TTH</p>
         </div>
         <div class="gambar-contaner">
           <img class="img-target" src="rii.jpg" alt="" height="180px">
